examples/test/testpolicy10683.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10683
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key39: value5
      key47: value36
      key20: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value18
      podSelector:
        matchLabels:
          key39: value0
          key13: value12
          key41: value11
